# l4cython

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  virtualenv.sh
data/: L4Cython_GPP-MERRA2_M01_config.yaml  L4Cython_GPP_M01_config.yaml  L4Cython_GPP_config.yaml  L4Cython_M01_config.yaml  L4Cython_RECO_M01_config.json  L4Cython_RECO_M01_config.yaml  L4Cython_RECO_M09_config.json  L4Cython_RECO_M09_config.yaml  L4Cython_RECO_config.yaml  L4Cython_Version7_test_cert_M01_config.yaml  L4Cython_config.yaml  L4Cython_config_template.json  L4Cython_spin-up_M09_config.json  L4Cython_spin-up_M09_config.yaml  L4Cython_spin-up_test_config.yaml
docs/: USER_GUIDE.md
l4cython/: .pre-commit-config.yaml  Makefile  budget.pyx  constraints.pxd  core.pxd  core.pyx  gpp.pyx  reco.pyx  reco_9km.pyx  resample.pxd  respiration.pxd  respiration.pyx  respiration_1km.pyx  respiration_9km.pyx  restart.pyx  science.pxd  setup.py  spinup_9km.pyx  test_1km.pyx
l4cython/utils/: Makefile  __init__.pxd  dec2bin.pxd  dec2bin.pyx  fixtures.py  fixtures.pyx  hdf5.pxd  hdf5.pyx  inflate.py  io.pxd  mkgrid.pxd  mkgrid.pyx  setup.py  spland.pxd
l4cython/utils/src/: dec2bin.c  hdf5.h  io.h  spland.c  spland.h  uuta.c  uuta.h
scripts/: 01_inflate_M01land_to_M01.sh  02_convert_M01_to_GeoTIFF.py  03_resample_M01_to_M09.sh  04_convert_M09_to_binary.py  05_deflate_M09_to_M09land.sh  convert_L4C_MDL_to_flatfile.py  convert_L4C_MET_to_flatfile.py  convert_L4C_SOC_restart_to_flatfile.py  convert_SOC_64bit_to_32bit.py  diff_L4Cython_and_L4C-V7.py  diff_L4Cython_and_L4CMDL.py  diff_RECO_M01_and_L4C-V7.py  inflate_and_scale_M09land_to_M01land.py  inflate_and_total_SOC.py  inflate_to_geotiff.py  plot_L4Cython.py  profile_spinup_9km.py  stats_L4CMDL.py
tests/: test_forward_run.py  test_forward_run_w_litterfall.py  test_spinup.py  test_utils.py
tests/data/: L4Cython_RECO_test_config.yaml  L4Cython_litterfall_allocation_clim_2012-2021_M09land_P12.flt32  L4Cython_spin-up_test_config.yaml  L4_C_mdl_V7_GPP_20150331_M09land.flt32  driver_annual_NPP_sum_M09land.flt32  driver_climate_SMSF_M09land_20150331.flt32  driver_climate_Tsoil_M09land_20150331.flt32  driver_land-cover_map_M09land.uint8  state_SOC_C0_M09land_DOY089.flt32  state_SOC_C1_M09land_DOY089.flt32  state_SOC_C2_M09land_DOY089.flt32
