[metadata]
name = l4cython
version = 0.1.0.dev
author = K. Arthur Endsley
author_email = arthur.endsley@ntsg.umt.edu
description = Cython version of L4C Science
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS

[options]
include_package_data = True
packages = l4cython
py_modules = respiration
python_requires = >=3.7
install_requires =
    Cython>=0.29.0
    numpy>=1.21.0
    scipy>=1.7.0
    tqdm>=4.66.0
    PyYAML>=6.0.0
